--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Jogo da Memória</h5>
                             <p class="card-text">Vamos testar sua memória! Encontre os pares amigos da natureza e ajude a preservar o planeta de forma divertida!</p>
-                            <a href="#" class="btn btn-primary">JOGUE AGORA!</a>
+                            <a href="jogos/jogo-memoria.html" class="btn btn-primary">JOGUE AGORA!</a>
                         </div>
                     </div>
                 </div>
