--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                         <a class="nav-link" href="jogos.html">Jogos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="galeria.html">Galeria</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="sobre.html">Sobre</a>
                     </li>
                 </ul>
@@ -116,7 +122,7 @@
                             <h5 class="card-title">Aprenda mais</h5>
                             <p class="card-text">Explore curiosidades, dicas e histórias sobre como cuidar do planeta. Aqui você encontra conteúdos educativos cheios de diversão e informação!
                             </p>
-                            <a href="#" class="btn btn-primary">JOGUE AGORA!</a>
+                            <a href="blog.html" class="btn btn-primary">DESCUBRA MAIS!</a>
                         </div>
                     </div>
                 </div>
@@ -129,7 +135,7 @@
                             <h5 class="card-title">Explore a Galeria</h5>
                             <p class="card-text">Veja as incríveis criações e desenhos dos nossos amigos estão compartilhando suas artes, e você também pode enviar a sua!
                             </p>
-                            <a href="jogos/jogo-memoria.html" class="btn btn-primary">JOGUE AGORA!</a>
+                            <a href="galeria.html" class="btn btn-primary">VEJA A GALERIA!</a>
                         </div>
                     </div>
                 </div>
@@ -178,6 +184,8 @@
                         <ul class="footer-nav">
                             <li><a class="footer-nav-link" href="#">Página Inicial</a></li>
                             <li><a class="footer-nav-link" href="jogos.html">Jogos Educativos</a></li>
+                            <li><a class="footer-nav-link" href="blog.html">Blog Educacional</a></li>
+                            <li><a class="footer-nav-link" href="galeria.html">Galeria EcoAventureiros</a></li>
                             <li><a class="footer-nav-link" href="sobre.html">Quem Somos</a></li>
                             <li><a class="footer-nav-link" href="contato.html">Contato</a></li>
                         </ul>
