--- a/jogos/jogo-memoria.html
+++ b/jogos/jogo-memoria.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="jogo.css">
@@ -18,7 +19,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Logo -->
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../images/ecoaventureiros-logo.png" alt="EcoAventureiros" title="EcoAventureiros" height="50">
             </a>
     
@@ -51,9 +52,7 @@
                 <form class="d-none d-lg-flex ms-3" role="search">
                     <input class="form-control me-2 area-pesquisa" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
                     <button class="btn btn-warning btn-lupa" type="submit">
-                        <i class="bi bi-search"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                        </svg></i>
+                        <i class="bi bi-search"></i>
                     </button>
                 </form>
             </div>
@@ -94,11 +93,23 @@
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-box">
-                        <a href="#">
+                        <a href="../index.html">
                             <img src="../images/ecoaventureiros-logo.png" alt="" height="40px">
                         </a>
                         <p>Projeto criado pelos EcoAventureiros. Juntos, por um planeta mais sustentável!
                         </p>
+                        <!-- Ícones de Redes Sociais -->
+                        <div class="social-icons">
+                            <a href="https://www.facebook.com/profile.php?id=61569595804767" target="_blank" class="text-white mx-2">
+                                <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
+                            </a>
+                            <a href="https://www.instagram.com/eco_aventureiros/#" target="_blank" class="text-white mx-2">
+                                <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
+                            </a>
+                            <a href="https://github.com/yasmngoncalves/Projeto-EcoAventureiros" target="_blank" class="text-white mx-2">
+                                <i class="bi bi-github" style="font-size: 1.5rem;"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
