--- a/galeria.html
+++ b/galeria.html
@@ -170,6 +170,8 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
 
+
+    <script src="./js/js.js"></script>
     <script src="index.js"></script>
 </body>
 
