style: espaçamentos cards e banner sobre

--- a/jogos.html
+++ b/jogos.html
@@ -71,7 +71,7 @@
         <section class="container my-5">
             <h2 class="text-center mb-4">Divirta-se e Aprenda!</h2>
 
-            <div class="row justify-content-center">
+            <div class="row justify-content-center g-4">
                 <!-- Primeiro Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
