--- a/sobre.html
+++ b/sobre.html
@@ -175,7 +175,7 @@
             </div>
 
             <!-- Banner Responsivo -->
-            <div class="banner text-center mb-4">
+            <div class="banner text-center my-4">
                 <img src="images/banner-pag-sobre.png" alt="Banner EcoAventureiros - Junte-se à Aventura Sustentável!"
                     class="img-fluid w-100" style="max-width: 100%; height: auto;">
             </div>
