--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section class="container my-5">
             <h2 class="text-center mb-4">Vamos começar a jornada!</h2>
 
-            <div class="row">
+            <div class="row g-4">
                 <!-- Primeiro Card -->
                 <div class="col-md-4">
                     <div class="card h-100">
