style: espaçamentos items nav

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <!-- Links da Navbar e barra de pesquisa -->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
+                <ul class="navbar-nav mx-auto mt-3 gap-2">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Início</a>
                     </li>
